# inf05016-push_relabel

./: CMakeLists.txt  README.md
include/: graph.hpp  heap.hpp  non-dec-bucket-array-2.hpp  non-dec-bucket-array.hpp
lab/: lab-notebook
lab/analysis/: I1.ins  I1.sol  I2.ins  I2.sol  I3.ins  I3.sol  I4.ins  I4.sol  I5.ins  I5.sol  I6.ins  I6.sol  Makefile  generate-graphs_commands.py  generate-test_commands.py  run-tests.sh  setup-environment.sh  vis-1.pbm  vis-2.pbm  vis-3.pbm  vis-4.pbm  vis-5.pbm  vis-6.pbm
lab/scripts/: generate-report.py
src/: graph.cpp  main.cpp  max-flow.cpp  new-washington.c  old_washington_with_fixed_seed.c  opm.cpp
